--- a/style/css/styles.css
+++ b/style/css/styles.css
@@ -110,7 +110,7 @@ main {
     height: 80vh;
 
     background-image: linear-gradient(rgba(0, 0, 0, 0.2),
-            rgba(0, 0, 0, 0.2)), url("img/newBanner.png");
+            rgba(0, 0, 0, 0.2)), url("../img/newBanner.png");
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
